# fastapi-vercel

./: .gitignore  Procfile  README.md  analysis.py  app.py  clerk_methods.py  config.py  database.py  database_models.py  database_workflow.sh  main.py  models.py  procfile  pyproject.toml  requirements.txt  scrape.py  search.py  vercel.json
alembic/: env.py
alembic/versions/: 293b5d854388_added_country_pricing_column.py  4976c6d1e98a_userid_should_be_string_not_int.py  5cff6fddcde2_make_sure_url_is_not_unique_in_product_.py  9a761b0c4159_include_competitor_analysis_column_in_.py  de319184bb9e_test.py  e0fa8cf9ba9a_make_sure_url_is_not_unique_in_product_.py
app/config/: config.py
app/database/: Database.md  database.py  db_setup.py
app/database/schema/: database.py
app/depedencies/: middleware.py  rate_limit.py
app/models/: database.py  product.py  research_request.py
app/routers/: research_router.py
app/services/: analysis.py  clerk.py  research_service.py  scrape_summarize.py  search_product.py
app/services/utils/: research_utils.py
app/tasks/: tasks.py
templates/: 404.html  footer.html  header.html  index.html
