[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "fastapi-vercel"
version = "0.0.1"
description = "FastAPI project deployed on Vercel"
readme = "README.md"
requires-python = "3.9"

dependencies = [
    "fastapi==0.95.2",
    "httpx==0.24.0",
    "jinja2==3.1.2",
    "pydantic==1.10.7",
    "uvicorn[standard]==0.22.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff"
]

[project.urls]
Source = "https://github.com/marcorichetta/fastapi-vercel"

[tool.black]
line-length = 120
fast = true
